feat: implement usage endpoint
